# scalapack

./: .gitignore  .project  CMakeLists.txt
BLACS/: CMakeLists.txt
BLACS/SRC/: BI_GetMpiTrType.c  BI_Pack.c  BI_Srecv.c  Bdef.h  CMakeLists.txt  blacs2sys_.c  blacs_abort_.c  blacs_barr_.c  blacs_exit_.c  blacs_get_.c  blacs_grid_.c  blacs_init_.c  blacs_map_.c  cgebr2d_.c  ctrbr2d_.c  ctrrv2d_.c  ctrsd2d_.c  dgebr2d_.c  dtrbr2d_.c  dtrrv2d_.c  dtrsd2d_.c  free_handle_.c  igebr2d_.c  igsum2d_.c  itrbr2d_.c  itrrv2d_.c  itrsd2d_.c  sgebr2d_.c  strbr2d_.c  strrv2d_.c  strsd2d_.c  sys2blacs_.c  zgebr2d_.c  ztrbr2d_.c  ztrrv2d_.c  ztrsd2d_.c
BLACS/TESTING/: CMakeLists.txt
CMAKE/: CheckBLACSCompilerFlags.cmake
PBLAS/: CMakeLists.txt
PBLAS/TESTING/: CMakeLists.txt
PBLAS/TIMING/: .CMakeLists.txt.swp  CMakeLists.txt
REDIST/: CMakeLists.txt
REDIST/SRC/: pcgemr.c  pctrmr.c  pdgemr.c  pdtrmr.c  pigemr.c  pitrmr.c  psgemr.c  pstrmr.c  pzgemr.c  pztrmr.c
SRC/: CMakeLists.txt  pcgesvd.f  pdgesvd.f  pdlaiect.c  psgesvd.f  pslaiect.c
TESTING/: CMakeLists.txt
TESTING/EIG/: CMakeLists.txt
TESTING/LIN/: CMakeLists.txt
TOOLS/: SL_gridreshape.c  reshape.c
