add_subdirectory(LIN)
add_subdirectory(EIG)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SCALAPACK_BINARY_DIR}/TESTING)

file(COPY BLLT.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY BLU.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY BRD.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY EVC.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY HRD.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY INV.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY LLT.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY LS.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY LU.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY NEP.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY QR.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY SEP.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY SEPR.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY SVD.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY TRD.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})


foreach(prec s d c z)
    if(BUILD_PRECISION MATCHES [${prec}])
        add_test(x${prec}lu ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}lu)
        add_test(x${prec}dblu ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}dblu)
        add_test(x${prec}dtlu ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}dtlu)
        add_test(x${prec}gblu ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}gblu)
        add_test(x${prec}llt ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}llt)
        add_test(x${prec}pbllt ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}pbllt)
        add_test(x${prec}ptllt ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}ptllt)
        add_test(x${prec}inv ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}inv)
        add_test(x${prec}qr ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}qr)
        add_test(x${prec}brd ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}brd)
        add_test(x${prec}hrd ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}hrd)
        add_test(x${prec}trd ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}trd)
        add_test(x${prec}sep ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}sep)
        add_test(x${prec}gsep ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}gsep)
        add_test(x${prec}nep ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}nep)
        add_test(x${prec}syevr ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./x${prec}syevr)
    endif()
endforeach()

if(BUILD_PRECISION MATCHES [s])
    add_test(xssvd ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./xssvd)
    add_test(xshseqr ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./xshseqr)
endif()
if(BUILD_PRECISION MATCHES [d])
    add_test(xdsvd ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./xdsvd)
    add_test(xdhseqr ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./xdhseqr)
endif()

if(BUILD_PRECISION MATCHES [c])
    add_test(xcevc ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./xcevc)
endif()
if(BUILD_PRECISION MATCHES [z])
    add_test(xzevc ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./xzevc)
endif()




