file(COPY ../SRC/PTOOLS/PB_Cwarn.c DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
file(COPY ../SRC/PTOOLS/PB_Cabort.c DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
add_library(pbtcom_c PB_Cwarn.c PB_Cabort.c)
target_compile_definitions(pbtcom_c PRIVATE TestingPblas)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SCALAPACK_BINARY_DIR}/PBLAS/TIMING)

foreach(prec s d c z)
    if(BUILD_PRECISION MATCHES [${prec}])
        set (common p${prec}blastim.f pblastim.f)
        string(TOUPPER ${prec} PREC)
        file(COPY P${PREC}BLAS1TIM.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
        file(COPY P${PREC}BLAS2TIM.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
        file(COPY P${PREC}BLAS3TIM.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
        add_executable(${prec}pb1tim p${prec}blas1tim.f ${common})
        add_executable(${prec}pb2tim p${prec}blas2tim.f ${common})
        add_executable(${prec}pb3tim p${prec}blas3tim.f ${common})
        target_link_libraries(${prec}pb1tim scalapack lapack blas pbtcom_c ${MPI_Fortran_LIBRARIES})
        target_link_libraries(${prec}pb2tim scalapack lapack blas pbtcom_c ${MPI_Fortran_LIBRARIES})
        target_link_libraries(${prec}pb3tim scalapack lapack blas pbtcom_c ${MPI_Fortran_LIBRARIES})
        add_test(${prec}pb1tim ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./${prec}pb1tim)
        add_test(${prec}pb2tim ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./${prec}pb2tim)
        add_test(${prec}pb3tim ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ./${prec}pb3tim)
    endif()
endforeach()
